--- a/frontend/src/styles/registroAlimentos.css
+++ b/frontend/src/styles/registroAlimentos.css
@@ -16,25 +16,6 @@ h1 {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.navbar {
-    width: 100%;
-    background-color: #16a085;
-    display: flex;
-    justify-content: center;
-}
-
-.navbar a {
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    font-size: 1.2em;
-    transition: background-color 0.3s ease;
-}
-
-.navbar a:hover {
-    background-color: #1abc9c;
-}
-
 .form-container {
     width: 90%;
     max-width: 800px;
@@ -89,6 +70,8 @@ h1 {
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-height: 400px; /* Limitar la altura máxima para la lista de alimentos */
+    overflow-y: auto;  /* Hacer scroll vertical si el contenido excede la altura */
 }
 
 .food-item {
@@ -102,14 +85,6 @@ h1 {
 
 .food-item:last-child {
     border-bottom: none;
-}
-
-.search-results {
-    margin-top: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .result-item {
@@ -143,3 +118,12 @@ h1 {
     border-radius: 5px;
     margin-right: 10px;
 }
+
+/* Asegúrate de que este estilo esté en tu archivo .css */
+.search-results {
+    max-height: 400px; /* Limitar la altura máxima para el contenedor */
+    overflow-y: auto;  /* Hacer scroll vertical si el contenido excede la altura */
+    margin-top: 20px;   /* Espaciado entre los resultados y otros elementos */
+    padding-right: 10px; /* Espacio para la barra de scroll */
+  }
+  
